# sonic-rabbit

./: .gitignore  README.md  pyproject.toml
data/: journeys.json
docs/: PLANNING.md  SPEC.md  architecture.md  demo_script.md  kaggle_writeup.md
docs/agents/: README.md  fact_checker.md  graph_linker.md  journey_researcher.md  narration_generator.md  orchestrator.md  song_fetcher.md  style_researcher.md
scripts/: recover_gospel.py  regen_tts_gemini.sh  run_m5.sh  show_journey.py
src/music_journey/: __init__.py
src/music_journey/api/: __init__.py  deps.py  main.py  rate_limiter.py  routes_html.py  routes_json.py
src/music_journey/core/: __init__.py  config.py  models.py  repository.py  repository_json.py  services.py
src/music_journey/discovery/: __init__.py  demand_log.py  embedder.py
src/music_journey/mcp_music/: server.py
src/music_journey/pipeline/: __init__.py  agent.py  agents.py  classifier.py  queue_manager.py  run.py  schemas.py  tts.py
src/music_journey/web/: __init__.py
src/music_journey/web/static/: style.css
src/music_journey/web/templates/: _playlist.html  _request_result.html  _song_step.html  base.html  entity.html  home.html  journey.html  journey_end.html
tests/: test_api_json.py  test_discovery.py  test_mcp_server.py  test_pipeline_schemas.py  test_repository_json.py  test_services.py  test_smoke.py
tests/evals/: fact_checker.test.json  graph_linker.test.json  journey_researcher.test.json  song_fetcher.test.json
