[project]
name = "music-journey"
version = "0.1.0"
description = "Curated music Journeys — chronological song sequences with editorial context."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "edge-tts>=7.2.8",
    "kokoro-onnx>=0.5.0",
    "piper-tts>=1.4.2",
    "soundfile>=0.14.0",
    "google-adk[eval]>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
]
discovery = [
    # Rung-2 semantic matchmaking (M3). Install with: uv sync --extra discovery
    "sentence-transformers>=3.0",
]
pipeline = [
    "google-adk[litellm]>=1.0",
    "litellm>=1.40",
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_journey"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
